[package]
name = "rust_xtb_api"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
native-tls = "0.2.11"
log = "0.4.20"
env_logger = "0.11.2"
chrono = "0.4.34"
rust_decimal = "1.34.3"